<resources>
    <string name="app_name">RAWGApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="create_your_password">Create Your Password</string>
    <string name="sign_up_to_rawg">Sign up to RAWG</string>
    <string name="game">Game</string>
    <string name="developers">Developers</string>
    <string name="rawg">RAWG</string>
    <string name="game_name">Game name</string>
    <string name="review">Review</string>
    <string name="released_date">Released date</string>
    <string name="rating">Rating</string>
    <string name="suggestions">Suggestions</string>
    <string name="auth_error">Error while signing up</string>
    <string name="released">Released</string>
    <string name="reating_top">Reating top</string>
    <string name="screenshots">Screenshots</string>
</resources>